--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body {
 }
 
 .right {
-  background: url(./images/hero-mobile.jpg);
+  background-image: url(./images/hero-mobile.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -243,7 +243,7 @@ input:focus {
   }
 
   .right {
-    background: url(./images/hero-desktop.jpg);
+    background-image: url(./images/hero-desktop.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
